Adaptacion a multiples pantallas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <ul class="nav-list">
+            <ul class="nav-list" id="nav-list">
     <li><a href="#inicio" class="active" aria-current="page">
       <span class="nav-icon">🏠</span>
       <span>Inicio</span>
