--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
             <ul class="nav-list" id="nav-list">
     <li><a href="#inicio" class="active" aria-current="page">
       <span class="nav-icon">🏠</span>
-      <span>Inicio</span>
+      <span class="nav-text">Inicio</span>
     </a></li>
     <li><a href="#sobre-mi">
       <span class="nav-icon">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M12 12c2.7 0 8 1.34 8 4v2H4v-2c0-2.66 5.3-4 8-4Zm0-2a4 4 0 1 1 0-8 4 4 0 0 1 0 8Z" fill="#4fc3f7"/></svg>
       </span>
-      <span>Sobre mí</span>
+      <span class="nav-text">Sobre mí</span>
     </a></li>
     <li><a href="#proyectos">
       <span class="nav-icon">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M3 13h2v-2H3v2Zm0 4h2v-2H3v2Zm0-8h2V7H3v2Zm4 8h14v-2H7v2Zm0-4h14v-2H7v2Zm0-6v2h14V7H7Z" fill="#4fc3f7"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M4 6h16M4 12h16M4 18h16" stroke="#4fc3f7" stroke-width="2.2" stroke-linecap="round"/></svg>
       </span>
-      <span>Proyectos</span>
+      <span class="nav-text">Proyectos</span>
     </a></li>
     <li><a href="#tecnologias">
       <span class="nav-icon">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M12 2 2 7l10 5 10-5-10-5Zm0 7.47L4.74 7 12 3.53 19.26 7 12 9.47ZM22 17.24V9.24l-1.5.75v6.25l-8.5 4.25-8.5-4.25V10l-1.5-.75v8l10 5 10-5Z" fill="#4fc3f7"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M12 3l9.5 5.5v7L12 21l-9.5-5.5v-7L12 3Zm0 2.3L5.1 9.2l6.9 4 6.9-4L12 5.3Zm7.5 6.2-6.5 3.8v5.2l6.5-3.8v-5.2Zm-15 0v5.2l6.5 3.8v-5.2l-6.5-3.8Z" fill="#4fc3f7"/></svg>
       </span>
-      <span>Tecnologías y Frameworks</span>
+      <span class="nav-text">Tecnologías y Frameworks</span>
     </a></li>
   </ul>
             <button id="toggle-theme" 
