--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <div class="proyectos-lista">
     <!-- Proyecto 1 -->
     <div class="proyecto">
-        <img class="proyecto-img" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=400&q=80" alt="Proyecto Portfolio Web Moderno">
-        <h3>Portfolio Web Moderno</h3>
-        <p>Sitio web personal responsive con navegación elegante, dark mode y animaciones suaves. Desarrollado en HTML, CSS y JS puro.</p>
+        <img class="proyecto-img" src="Assets/img/Generador de Comandos.NET.png" alt="Proyecto Portfolio Web Moderno">
+        <h3>Generador de Comandos .NET</h3>
+        <p>Generador de comandos .NET para crear proyectos a partir de plantillas. Desarrollado en HTML, CSS y JS puro.</p>
         <a href="#" target="_blank" rel="noopener">Ver más</a>
     </div>
     <!-- Proyecto 2 -->
@@ -82,7 +82,7 @@
         <img class="proyecto-img" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q=80" alt="Proyecto Dashboard Analytics">
         <h3>Dashboard Analytics</h3>
         <p>Panel interactivo para visualización de métricas en tiempo real usando React, Chart.js y Node.js. Incluye autenticación y filtros dinámicos.</p>
-        <a href="#" target="_blank" rel="noopener">Ver más</a>
+        <a href="/Pages/Proyect1/commandGeneratNet.html" target="_blank" rel="noopener">Ver más</a>
     </div>
     <!-- Proyecto 3 -->
     <div class="proyecto">
