correccion en rutas de archivos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Junier Dev- Desarrollador de Software</title>
-    <link rel="icon" type="image/svg+xml" href="assets/img/icono-web.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/image/icono-web.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
             <div class="header-content">
                 <a class="logo" href="#">
                     <div class="logo-icon">
-                        <img src="assets/img/icono-web.svg" class="logo-icon" alt="">
+                        <img src="assets/image/icono-web.svg" class="logo-icon" alt="">
                     </div>
                     <h2 class="logo-text">Junier Ayala Perez</h2>
                 </a>
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="hero-image">
-                        <img class="profile-image" src="assets/img/2.jpg"></img>
+                        <img class="profile-image" src="assets/image/2.jpg"></img>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                 <div class="projects-grid">
                     <!-- Project Card 1 -->
                     <div class="project-card">
-                       <img class=" project-image" src="/assets/img/P1.png" alt="">
+                       <img class=" project-image" src="/assets/image/P1.png" alt="">
                         <h3>Generador de Comandos .NET</h3>
                         <p>Generador de comandos .NET para crear proyectos a partir de plantillas.</p>
                         <div class="project-tags">
@@ -125,7 +125,7 @@
                     </div>
                     <!-- Project Card 2 -->
                     <div class="project-card">
-                       <img class=" project-image" src="/assets/img/P2.png" alt="">
+                       <img class=" project-image" src="/assets/image/P2.png" alt="">
                         <h3>Generador de texto a voz</h3>
                         <p>Generador de texto a voz en tiempo real con ajustes de voz.</p>
                         <div class="project-tags">
