correccion de nombre de archivos y eliminacion

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="projects-grid">
                     <!-- Project Card 1 -->
                     <div class="project-card">
-                       <img class=" project-image" src="/assets/image/P1.png" alt="">
+                       <img class=" project-image" src="/assets/image/Proyecto1.png" alt="">
                         <h3>Generador de Comandos .NET</h3>
                         <p>Generador de comandos .NET para crear proyectos a partir de plantillas.</p>
                         <div class="project-tags">
@@ -125,7 +125,7 @@
                     </div>
                     <!-- Project Card 2 -->
                     <div class="project-card">
-                       <img class=" project-image" src="/assets/image/P2.png" alt="">
+                       <img class=" project-image" src="/assets/image/Proyecto2.png" alt="">
                         <h3>Generador de texto a voz</h3>
                         <p>Generador de texto a voz en tiempo real con ajustes de voz.</p>
                         <div class="project-tags">
