integracion de botones y mejoras de diseño

--- a/index.html
+++ b/index.html
@@ -163,34 +163,129 @@
         <!-- Skills Section -->
         <section class="section" id="habilidades">
             <div class="container">
-                <h2 class="section-title" data-i18n="skills.title">Tecnologías y Habilidades</h2>
-                <div class="skills-grid">
-                    <div class="skill-category">
-                        <ul>
-                            <li>HTML5 & CSS3</li>
-                            <li>JavaScript (ES6+)</li>
-                            <li>TypeScript</li>
-                            <li>React</li>
-                            <li>React Native</li>
-                            <li>ASPX.NET</li>
-                            <li>Vue.js</li>
-                            <li>Tailwind CSS</li>
-                            <li>Node.js & Express</li>
-                            <li>Python (Flask, Django)</li>
-                            <li>REST APIs</li>
-                            <li>GraphQL</li>
-                            <li>Java & Spring Boot</li>
-                             <li>PostgreSQL</li>
-                            <li>MySQL</li>
-                            <li>MongoDB</li>
-                            <li>Redis</li>
-                            <li>Firebase</li>
-                            <li>AWS (EC2, S3, RDS)</li>
-                            <li>Docker</li>
-                            <li>Git & GitHub</li>
-                            <li>CI/CD</li>
-                            <li>Vercel</li>
-                        </ul>
+                <h2 class="section-title" data-i18n="skills.title">Habilidades Técnicas</h2>
+                <p class="section-text">Mi stack tecnológico, organizado por categorías para una rápida visualización de mis competencias clave.</p>
+                <div class="skills-categories">
+                    <div class="skills-group">
+                        <h3 class="skills-group-title">Lenguajes de Programación</h3>
+                        <div class="skills-row">
+                            <div class="skill-card"><div class="skill-icon">C#</div>
+                                <div class="skill-name">C#</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card"><div class="skill-icon">JS</div>
+                                <div class="skill-name">JavaScript</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card"><div class="skill-icon">TS</div>
+                                <div class="skill-name">TypeScript</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card"><div class="skill-icon">VS</div>
+                                <div class="skill-name">Visual Basic</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card"><div class="skill-icon">Py</div>
+                                <div class="skill-name">Python</div>
+                                <div class="skill-level basico">Básico</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skills-group">
+                        <h3 class="skills-group-title">Frameworks y Librerías</h3>
+                        <div class="skills-row">
+                            <div class="skill-card">
+                                <div class="skill-icon">REACT</div>
+                                <div class="skill-name">React.js</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card">
+                                <div class="skill-icon">RNV</div>
+                                <div class="skill-name">React Native</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">DEVEXPR</div>
+                                <div class="skill-name">DevExpress</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">DEVEXP</div>
+                                <div class="skill-name">DevExpress Reports</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card">
+                                <div class="skill-icon">BOOT</div>
+                                <div class="skill-name">Bootstrap</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">VUE</div>
+                                <div class="skill-name">Vue.js</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="skills-group">
+                        <h3 class="skills-group-title">Bases de Datos</h3>
+                        <div class="skills-row">
+                            <div class="skill-card">
+                                <div class="skill-icon">SQL </div>
+                                <div class="skill-name">Sql Server</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card">
+                                <div class="skill-icon">SQL Lite </div>
+                                <div class="skill-name">Sql Lite</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">Mysql</div>
+                                <div class="skill-name">Mysql</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">MongoDB</div>
+                                <div class="skill-name">MongoDb</div>
+                                <div class="skill-level basico">Basico</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">Progress Sql</div>
+                                <div class="skill-name">Progress Sql</div>
+                                <div class="skill-level basico">Basico</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="skills-group">
+                        <h3 class="skills-group-title">Herramientas y Plataformas</h3>
+                        <div class="skills-row">
+                            <div class="skill-card">
+                                <div class="skill-icon">Git</div>
+                                <div class="skill-name">Git</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card">
+                                <div class="skill-icon">Azure </div>
+                                <div class="skill-name">Azure</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                            <div class="skill-card">
+                                <div class="skill-icon">Visual Studio</div>
+                                <div class="skill-name">Visual Studio</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">Postman</div>
+                                <div class="skill-name">Postman</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                             <div class="skill-card">
+                                <div class="skill-icon">Playwright</div>
+                                <div class="skill-name">Playwright</div>
+                                <div class="skill-level avanzado">Avanzado</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
