--- a/index.html
+++ b/index.html
@@ -419,6 +419,18 @@
         </div>
     </footer>
 
+    <a href="https://wa.me/573203641091?text=Vi%20tu%20perfil%20y%20me%20llam%C3%B3%20la%20atenci%C3%B3n"
+    class="whatsapp-float"
+    target="_blank"
+    aria-label="WhatsApp">
+
+    <svg width="40" height="40" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="16" cy="16" r="16" fill="#25D366"/>
+        <path fill="#fff" d="M16 8C12.14 8 9 11.13 9 15c0 1.58.46 3.05 1.27 4.29L9 24l4.86-1.24A7.02 7.02 0 0 0 16 22c3.86 0 7-3.13 7-7s-3.14-7-7-7zm0 12.13c-1.25 0-2.47-.37-3.5-1.05l-.25-.16-2.08.53.56-2.01-.13-.21A5.8 5.8 0 0 1 10.2 15c0-3.18 2.62-5.78 5.8-5.78 3.19 0 5.8 2.6 5.8 5.78s-2.61 5.78-5.8 5.78zm3.41-4.33c-.19-.1-1.12-.55-1.29-.61-.17-.06-.3-.1-.43.1-.13.19-.5.62-.62.75-.12.12-.23.14-.42.05-.19-.1-.8-.29-1.53-.93-.57-.5-.96-1.11-1.07-1.3-.11-.19-.01-.29.08-.38.08-.08.19-.21.28-.31.1-.1.13-.17.19-.28.06-.12.03-.21-.02-.3-.05-.1-.43-1.03-.59-1.42-.16-.38-.33-.33-.43-.33h-.37c-.12 0-.3.04-.45.21-.15.16-.6.59-.6 1.44 0 .85.62 1.67.71 1.79.1.12 1.22 1.93 2.96 2.71 1.74.78 1.74.52 2.05.5.31-.03 1.05-.43 1.2-.85.15-.42.15-.78.11-.85-.05-.07-.18-.11-.37-.2z"/>
+    </svg>
+    </a>
+
+
     <script src="script.js"></script>
 </body>
 </html>
