AJustes e integracion de nuevo proyecto personal YouGym

--- a/index.html
+++ b/index.html
@@ -190,17 +190,17 @@
                     </div>
                     <!-- Project Card 3 -->
                     <div class="project-card">
-                        <div class="project-image" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuC9nNZ76y6O-ll8JlWDTi1ejng3ihp3cDGOZ8oMvXZJAW0Bbxht3w4AeSZCE6LUS1d5igENnO4KBr8ojlWOcBB2aFIF02wle8BKkkmxmCVkRL97pB1tStpVlNZPeLd08TJ5qeJTIAfs1bmJA-Upje-Ac4oVDwBIPEcC2KIx9K5VMTQVQhaT70f5bOrsf4YO8lzjBxoaQWGrAkBgU0IlfCM1PIEJcm3wuRXug7rG2usVqZhw7RfwiAw-HUzSoNr0bJwxuKjDAIhpGqxe')"></div>
-                        <h3 data-i18n="projects.project3.title">Dashboard Analítico</h3>
-                        <p data-i18n="projects.project3.description">Panel de control interactivo para visualizar métricas clave de negocio con gráficos y tablas de datos dinámicas.</p>
+                         <img class=" project-image" src="./public/YouGym-demo1.png" alt="">
+                        <h3 data-i18n="projects.project3.title">YouGym</h3>
+                        <p data-i18n="projects.project3.description">Plataforma multiplataforma para la gestion de mensualidades, fechas de vencimiento, regristro de ingresos y alumnos de gimnasios Pequeños</p>
                         <div class="project-tags">
-                            <span class="tag">Vue.js</span>
-                            <span class="tag">D3.js</span>
-                            <span class="tag">Python (Flask)</span>
+                            <span class="tag">React.js</span>
+                            <span class="tag">TypeScript</span>
+                            <span class="tag">SqlLite</span>
+                             <span class="tag">PWN</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link" data-i18n="projects.demo">Demo <span class="material-symbols-outlined">open_in_new</span></a>
-                            <a href="#" class="project-link">GitHub <span class="material-symbols-outlined">code</span></a>
+                            <a href="https://yougym-v2.pages.dev/" class="project-link" data-i18n="projects.demo">Demo <span class="material-symbols-outlined">open_in_new</span></a>
                         </div>
                     </div>
                 </div>
