Ajustes y mejoras en imagenes del proyecto

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="projects-grid">
                     <!-- Project Card 1 -->
                     <div class="project-card">
-                       <img class=" project-image" src="assets/image/proyecto1.png" alt="">
+                       <img class=" project-image" src="./public/proyecto1.png" alt="">
                         <h3 data-i18n="projects.project1.title">Generador de Comandos .NET</h3>
                         <p data-i18n="projects.project1.description">Generador de comandos .NET para crear proyectos a partir de plantillas.</p>
                         <div class="project-tags">
@@ -175,7 +175,7 @@
                     </div>
                     <!-- Project Card 2 -->
                     <div class="project-card">
-                       <img class=" project-image" src="assets/image/proyecto2.png" alt="">
+                       <img class=" project-image" src="./public/proyecto2.png" alt="">
                         <h3 data-i18n="projects.project2.title">Generador de texto a voz</h3>
                         <p data-i18n="projects.project2.description">Generador de texto a voz en tiempo real con ajustes de voz.</p>
                         <div class="project-tags">
